--- a/index.html
+++ b/index.html
@@ -110,17 +110,6 @@
     tr:nth-child(even) {
       background-color: rgba(255,255,255,0.1);
     }
-    /* Dramatic Animation for table rows */
-    tbody tr {
-      opacity: 0;
-      transform: translateY(20px) scale(0.8);
-      animation: dramaticFadeIn 0.8s ease forwards;
-    }
-    @keyframes dramaticFadeIn {
-      0% { opacity: 0; transform: translateY(20px) scale(0.8); }
-      60% { opacity: 1; transform: translateY(-5px) scale(1.05); }
-      100% { transform: translateY(0) scale(1); }
-    }
     /* Responsive design */
     @media (max-width: 600px) {
       .menu-item {
@@ -215,7 +204,41 @@
       }
     }
 
-    // Function to fetch JSON data and update the standings table
+    // Animate scramble effect on a given element.
+    // It replaces the element's text with random characters until the final text is revealed.
+    function animateScramble(element, finalText, durationMs) {
+      finalText = finalText.toString();
+      const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()-_=+[]{};:,.<>/?";
+      const revealTimes = [];
+      for (let i = 0; i < finalText.length; i++) {
+        revealTimes.push(Math.random() * durationMs);
+      }
+      const startTime = performance.now();
+      function update() {
+        const now = performance.now();
+        const elapsed = now - startTime;
+        let output = "";
+        let allRevealed = true;
+        for (let i = 0; i < finalText.length; i++) {
+          if (elapsed > revealTimes[i]) {
+            output += finalText[i];
+          } else {
+            allRevealed = false;
+            output += chars[Math.floor(Math.random() * chars.length)];
+          }
+        }
+        element.textContent = output;
+        if (!allRevealed && elapsed < durationMs) {
+          requestAnimationFrame(update);
+        } else {
+          element.textContent = finalText;
+        }
+      }
+      requestAnimationFrame(update);
+    }
+
+    // Fetch JSON data and update the standings table with scramble animations.
+    // Rank cells show immediately; name cells scramble over 8 seconds, then after 8 seconds the points cells scramble over another 8 seconds.
     function updateStandings() {
       fetch('data/source.json')
         .then(response => response.json())
@@ -225,29 +248,34 @@
           participants.sort((a, b) => b.points - a.points);
           const tbody = document.getElementById('standingsBody');
           tbody.innerHTML = ''; // Clear previous rows
-          const delayInterval = 0.15;
-          const total = participants.length;
           participants.forEach((participant, index) => {
             const row = document.createElement('tr');
             const rankCell = document.createElement('td');
             const nameCell = document.createElement('td');
             const pointsCell = document.createElement('td');
+
+            // Rank shows immediately.
             rankCell.textContent = index + 1;
-            nameCell.textContent = participant.name;
-            pointsCell.textContent = participant.points;
+            nameCell.textContent = "";
+            pointsCell.textContent = "";
+
             row.appendChild(rankCell);
             row.appendChild(nameCell);
             row.appendChild(pointsCell);
-            // Apply staggered delay (more dramatic appearance from last to first)
-            const delay = (total - index - 1) * delayInterval;
-            row.style.animationDelay = delay + 's';
             tbody.appendChild(row);
+
+            // Animate name scramble over 8 seconds.
+            animateScramble(nameCell, participant.name, 8000);
+            // Animate points scramble (as a string) after 8 seconds, over another 8 seconds.
+            setTimeout(() => {
+              animateScramble(pointsCell, participant.points.toString(), 8000);
+            }, 8000);
           });
         })
         .catch(error => console.error('Error fetching JSON:', error));
     }
 
-    // On page load, display the main menu
+    // On page load, display the main menu.
     document.addEventListener("DOMContentLoaded", function() {
       showSection('menuSection');
     });
