--- a/index.html
+++ b/index.html
@@ -482,19 +482,43 @@
           const participants = data.participants.slice();
           // Sort participants by points descending (rank 1 = highest)
           participants.sort((a, b) => b.points - a.points);
+
           const tbody = document.getElementById('standingsBody');
           tbody.innerHTML = '';
+
           const totalAnimationTime = 16000; // 16 seconds total
           const totalRows = participants.length;
           const delayStep = totalAnimationTime / totalRows;
+
+          // We'll track the last seen points and the rank for that tie group.
+          let lastPoints = null;
+          let lastRank = 1;
+
           participants.forEach((participant, index) => {
             const row = document.createElement('tr');
             const rankCell = document.createElement('td');
             const nameCell = document.createElement('td');
             const pointsCell = document.createElement('td');
 
-            // Rank shows immediately
-            rankCell.textContent = index + 1;
+            // Tie logic: if this participant has the same points as the previous,
+            // display the same rank with a "T-" prefix.
+            if (index === 0) {
+              rankCell.textContent = 1; // First row is always rank 1
+              lastPoints = participant.points;
+              lastRank = 1;
+            } else {
+              if (participant.points === lastPoints) {
+                // Same score => tied rank
+                rankCell.textContent = "T-" + lastRank;
+              } else {
+                // New score => new rank
+                lastPoints = participant.points;
+                lastRank = index + 1;
+                rankCell.textContent = lastRank;
+              }
+            }
+
+            // We'll scramble in the name & points cells as before
             nameCell.textContent = "";
             pointsCell.textContent = "";
 
@@ -586,7 +610,7 @@
           const teamsStr = match.teams[0] + " vs " + match.teams[1];
           let winnerStr = match.winner;
           if (roundData.round === 1 && match.score) {
-            winnerStr += ` (Score: ${match.score})`;
+            winnerStr += \` (Score: \${match.score})\`;
           }
           html += `
             <tr>
@@ -603,7 +627,7 @@
     }
 
     // ---------------- TV Schedule Section ----------------
-    // TV schedule content is static and defined in the HTML below.
+    // TV schedule content is static in the HTML.
 
     // ---------------- Facts Section ----------------
     const facts = [
@@ -659,6 +683,7 @@
       }
     ];
     let currentFactIndex = 0;
+
     function updateFact() {
       const factContainer = document.getElementById('factContent');
       const fact = facts[currentFactIndex];
@@ -680,10 +705,16 @@
         updateFact();
       }
     }
+
     // On page load, initialize facts section (if visited later)
     document.addEventListener("DOMContentLoaded", function() {
       showSection('menuSection');
     });
+
+    // Helper to scroll to top
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
   </script>
 </body>
 </html>
